[tool.poetry]
name = "urbanity"
version = "0.5.8"
description = ""
authors = ["winstonyym <winstonyym@u.nus.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "2.8.6"
ipykernel = "6.16.2"
ipyleaflet = "0.17.2"
pyrosm = "0.6.2"
protobuf = "3.20.0"
mercantile = "^1.2.1"
ipywidgets = "8.0.2"
rasterio = "^1.3.8"
pandas = "^2.2.2"
geopandas = "^1.0.1"
numpy = "1.26.4"
pyrobuf = "^0.9.3"
pydeck = "^0.9.1"
setuptools = "^76.0.0"
networkit = "^11.1"
h5py = "^3.13.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.1"
pyarrow = "^19.0.1"
h3 = "3.7.4"
pandarallel = "^1.6.5"
folium = "^0.19.5"
geodatasets = "^2024.8.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = "1.1.2"
sphinx-autoapi = "3.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
